removing getFirst